<resources>
    <string name="app_name">MMPS</string>
    <string name="getting_Smart_libraries">Getting smart libraries…</string>
    <string name="book_name">Book name</string>
    <string name="getting_books">Getting books…</string>
    <string name="search_books">Search books</string>
    <string name="tag_line"><a href="http://tantraved.in/Android/Regions.aspx">Libraries</a> and books from well know libraries in Maharashtra</string>
    <string name="tantraved"><a href="http://www.tantraved.in/">Tantraved</a> Jalgaon. 2018</string>
    <string name="regions">Regions</string>
    <string name="please_wait">Please wait</string>
    <string name="all_libraries">All libraries</string>
    <string name="enter">Enter</string>
    <string name="updated_libraries">Updated libraries</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="smart_library">Smart Library</string>
    <string name="cannot_be_empty">Cannot be empty!</string>
    <string name="something_went_wrong">Something went wrong!</string>
    <string name="nothing_to_show">Nothing to show.</string>
    <string name="about_us">About us</string>
    <string name="contact">Contact no. %1$s</string>
    <string name="history">History</string>
    <string name="management">Management</string>
    <string name="venture">Venture</string>
    <string name="opinion_of_dignitaries">Opinoion of dignitaries</string>
    <string name="new_books">New books</string>
    <string name="rare_books">Rare books</string>
    <string name="numerology">Numerology</string>
    <string name="my_membership">My membership</string>
    <string name="trusted_board">Trusted board</string>
    <string name="total">Total</string>
    <string name="books">Books</string>
    <string name="social_projects">Social projects</string>
    <string name="granthsampada">Granthsampada</string>
    <string name="daily_book_transactions">Daily book transactions</string>
    <string name="type_wise_reading">Reader book type</string>
    <string name="popular_10_books">Popular 10 books</string>
    <string name="top_10_readers">Popular 10 readers</string>
    <string name="membership_schemes">Membership shcemes</string>
    <string name="member">Member</string>
    <string name="my_books">My books</string>
    <string name="donation_reciepts">Donation receipts</string>
    <string name="suggestions">Suggestions</string>
    <string name="magazines">Magazines</string>
    <string name="duration">Duration</string>
    <string name="members_has_read">Members has read</string>
    <string name="current_year_book_purchase">Current year book purchase</string>
    <string name="days">Days</string>
    <string name="srno">Sr No.</string>
    <string name="book_type">Book type</string>
    <string name="total_books">Total books</string>
    <string name="price">Price</string>
    <string name="books_read">books_read</string>
    <string name="member_schemes">Member schemes</string>
    <string name="total_members">Total members</string>
    <string name="title_activity_navigation_control_panel">NavigationControlPanelActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="established">Established</string>
    <string name="patrakar_sangha">Patrakar Sangha</string>
    <string name="syllabus">Syllabus</string>
    <string name="awards">Awards</string>
    <string name="videos">Videos</string>
    <string name="rest_house">Rest house</string>
    <string name="library">Library</string>
    <string name="patrakarita">Patrakarita</string>
    <string name="mumbai_media">Mumbai media</string>
    <string name="mumbai_karyalay_sabhagriha">Mumbai karyalay sabhagriha</string>
    <string name="vishramgriha_sabhagriha_nondni">Vishramgriha / sabhagriha nondni</string>
    <string name="lonavla_sabhagriha">Lonavla sabhagriha</string>
    <string name="available">Available</string>
    <string name="not_available">Not available</string>
    <string name="vividha_patrakarita_puraskar">Vividha Patrakarita Puraskar</string>
    <string name="award_winners">Award winners</string>
    <string name="year">Year</string>
    <string name="room_type">Room Type</string>
    <string name="room_capacity">Room Capacity</string>
    <string name="room_deposit">Deposit</string>
    <string name="room_rent">Rent</string>
    <string name="tax">Tax</string>
    <string name="room_no">Room number</string>
    <string name="person">Person</string>
    <string name="rs">Rs</string>
</resources>
