<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toobar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/regions"
            android:textColor="@color/white"
            android:textSize="@dimen/s16sp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/etRegionSearchBook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/btnRegionSearchBook"
        android:layout_below="@id/toobar"
        android:layout_marginEnd="@dimen/d8dp"
        android:layout_marginLeft="@dimen/d4dp"
        android:layout_marginRight="@dimen/d8dp"
        android:layout_marginStart="@dimen/d4dp"
        android:layout_toLeftOf="@id/btnRegionSearchBook"
        android:layout_toStartOf="@id/btnRegionSearchBook"
        android:backgroundTint="@color/pink"
        android:hint="@string/book_name"
        android:textSize="@dimen/s16sp" />

    <Button
        android:id="@+id/btnRegionSearchBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/toobar"
        android:layout_marginEnd="@dimen/d4dp"
        android:layout_marginRight="@dimen/d4dp"
        android:layout_marginTop="@dimen/d8dp"
        android:background="@color/colorPrimary"

        android:padding="@dimen/d8dp"
        android:text="@string/search_books"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRegions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnRegionSearchBook"
        android:layout_marginTop="@dimen/d8dp" />

    <Button
        android:id="@+id/btnAllLibraries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rvRegions"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/d8dp"
        android:background="@color/colorPrimary"
        android:padding="@dimen/d8dp"
        android:text="@string/all_libraries"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/s16sp" />

</RelativeLayout>
