<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/s16sp" />
    </androidx.appcompat.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/ivAwards"
            android:layout_width="@dimen/d40dp"
            android:layout_height="@dimen/d40dp"
            android:background="@drawable/ic_awards"
            android:layout_centerVertical="true"
            android:layout_margin="@dimen/d8dp"/>

        <TextView
            android:id="@+id/tvAwardPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/d8dp"
            android:layout_marginStart="@dimen/d8dp"
            android:layout_marginTop="@dimen/d8dp"
            android:layout_toEndOf="@id/ivAwards"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp"
            android:layout_toRightOf="@id/ivAwards" />

        <TextView
            android:id="@+id/tvAwardCriteria"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvAwardPrice"
            android:layout_margin="@dimen/d8dp"
            android:singleLine="true"
            android:layout_toEndOf="@id/ivAwards"
            android:textColor="@color/black"
            android:textSize="@dimen/s16sp"
            android:layout_toRightOf="@id/ivAwards" />

    </RelativeLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/d1dp"
        android:layout_marginTop="@dimen/d8dp"
        android:background="@android:color/black" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/d8dp"
        android:elevation="@dimen/d8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableLayout
                android:id="@+id/tableAwards"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:attr/dividerHorizontal"
                android:showDividers="middle"
                android:stretchColumns="*">

                <TableRow>

                    <TextView
                        android:id="@+id/tv2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginLeft="@dimen/d8dp"
                        android:gravity="end"
                        android:paddingLeft="@dimen/d8dp"
                        android:paddingStart="@dimen/d8dp"
                        android:text="@string/srno"
                        android:textColor="@color/black"
                        android:textSize="@dimen/s16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:text="@string/award_winners"
                        android:textColor="@color/black"
                        android:textSize="@dimen/s16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:paddingEnd="@dimen/d16dp"
                        android:paddingRight="@dimen/d16dp"
                        android:text="@string/year"
                        android:textColor="@color/black"
                        android:textSize="@dimen/s16sp"
                        android:textStyle="bold" />
                </TableRow>
            </TableLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>
</LinearLayout>